--- a/warofsix/main/templates/main/layout.html
+++ b/warofsix/main/templates/main/layout.html
@@ -40,6 +40,14 @@
               <a class="nav-link" href="/settlement">Settlement</a>
             </li>
 
+            <li class="nav-item">
+              <a class="nav-link" href="/encampment">Encampment</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="/battle">BATTLE</a>
+            </li>
+
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/usermessages/inbox">Messages</a>
