--- a/warofsix/encampment/templates/encampment/encampment.html
+++ b/warofsix/encampment/templates/encampment/encampment.html
@@ -71,214 +71,71 @@
   
   <div class="troop-management-container">
 
-          <h4>SET DEFENSIVE FORMATION</h4>
+    <h3>SET DEFENSIVE FORMATION</h3>
+
+    
+    <form method="post" id="defence"> {% csrf_token %}
+      
+      
+      <input type="hidden" name="form_type" value="defence">
+      
+      <div class="formation-table2">
+        
+        
+        {% for position, value in defensive_formation_data2.items %}
+        <div class="formation-item2">
+
+            <select id="slcd-{{position}}" name="troop{{position}}" class="troop-select" aria-label="Default select example">
+              
+              {% for troop in union_troops %}
+              <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == value.troop %} selected {% endif %} >{{troop.troop}}</option>
+              {% endfor %}
+            </select>
             
-          <form method="post" id="defence"> {% csrf_token %}
-          
-
-            <input type="hidden" name="form_type" value="defence">
-
-            <div class="formation-table">
+            <img id="imgd{{position}}" class="formation-img" src="{% get_static_prefix %}images/troops/{{ value.troop  }}.png" alt="">
             
-              <div class="formation-row">
-                <div class="formation-item" id="31">
-                  
-                    <select id="slcd-31" name="troop31" class="troop-select" aria-label="Default select example">
-                      {% for troop in union_troops %}
-                      <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop31 %} selected {% endif %} >{{troop.troop}}</option>
-                      {% endfor %}
-                    </select>
+            <input type="range" name="numd{{position}}" class="form-range range-input" id="customRange{{position}}" min="0" max="100" step="5" value="{{value.numd }}">
+            <div><span>%</span><span class="range-value" id="rangeValue{{position}}">{{value.numd }}</span>  | {{value.countd }}</div>
+            
+            <div class="hero-select-container">
+              <div class="hero-select-menu">
+                <select id="herod-{{position}}" name="herod{{position}}" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                  <option id ="99">Add Hero</option>
+                  {% for hero in user_heroes %}
+                  <option id="{{hero.hero.id}}" value="{{hero.id}}" {% if hero.position|stringformat:'d' == position %}
+                  selected
 
-                    <img id="imgd31" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop31}}.png" alt="">
-
-                    <input type="range" name="numd31" class="form-range range-input" id="customRange1" min="0" max="100" step="5" value="{{defensive_formation_data.numd31}}">
-                    <div><span>%</span><span class="range-value" id="rangeValue1">{{defensive_formation_data.numd31}}</span>  | {{defensive_formation_data.countd31}}</div>
-
-                </div>
-
-                <div class="formation-item" id="32">
-                     
-                  
-                  <select id="slcd-32" name="troop32" class="troop-select" aria-label="Default select example">
-                    {% for troop in union_troops %}
-                    <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop32 %} selected {% endif %}>{{troop.troop}}</option>
-                    {% endfor %}
-                  </select>
-
-                    <img id="imgd32" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop32}}.png" alt="">
-
-
-                  <input type="range" name="numd32" class="form-range range-input" id="customRange2" min="0" max="100" step="5" value="{{defensive_formation_data.numd32}}">
-                  <div> <span>%</span> <span class="range-value" id="rangeValue2">{{defensive_formation_data.numd32}}</span> | {{defensive_formation_data.countd32}}</div> 
-                </div>
-
-                <div class="formation-item"  id="33">
-                  
-
-                  <select id="slcd-33" name="troop33" class="troop-select" aria-label="Default select example">
-                    {% for troop in union_troops %}
-                    <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop33 %} selected {% endif %}>{{troop.troop}}</option>
-                    {% endfor %}
-                  </select>
-                  
-                  <img id="imgd33" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop33}}.png" alt="">
-
-                  <input type="range" name="numd33" class="form-range range-input" id="customRange3" min="0" max="100" step="5" value="{{defensive_formation_data.numd33}}">
-                  <div> <span>%</span> <span class="range-value" id="rangeValue3">{{defensive_formation_data.numd33}}</span>  | {{defensive_formation_data.countd33}}</div> 
-                </div>
-
-                <div class="formation-item"  id="34">
-                  
-
-                  <select id="slcd-34" name="troop34" class="troop-select" aria-label="Default select example">
-                    {% for troop in union_troops %}
-                    <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop34 %} selected {% endif %}>{{troop.troop}}</option>
-                    {% endfor %}
-                  </select>
-                  
-                  <img id="imgd34" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop34}}.png" alt="">
-
-                  <input type="range" name="numd34" class="form-range range-input" id="customRange4" min="0" max="100" step="5" value="{{defensive_formation_data.numd34}}">
-                  <div> <span>%</span> <span class="range-value" id="rangeValue4">{{defensive_formation_data.numd34}}</span>  | {{defensive_formation_data.countd34}}</div> 
-                </div>
-
+                  {% endif %}>{{hero.hero}}</option>
+                  {% endfor %}
+                </select>
               </div>
 
-              <div class="formation-row">
-                <div class="formation-item" id="21">
-                  <b>21</b>
-                    <select id="slcd-21" name="troop21" class="troop-select" aria-label="Default select example">
-                      {% for troop in union_troops %}
-                      <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop21 %} selected {% endif %}>{{troop.troop}}</option>
-                      {% endfor %}
-                    </select>
-
-                    <img id="imgd21" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop21}}.png" alt="">
-
-                    <input type="range" name="numd21" class="form-range range-input" id="customRange5" min="0" max="100" step="5" value="{{defensive_formation_data.numd21}}">
-                    <div> <span>%</span> <span class="range-value" id="rangeValue5">{{defensive_formation_data.numd21}}</span>  | {{defensive_formation_data.countd21}}</div> 
-                </div>
-
-                <div class="formation-item" id="22">
-                  <b>22</b>    
-                  
-                  <select id="slcd-22" name="troop22" class="troop-select" aria-label="Default select example">
-                    {% for troop in union_troops %}
-                    <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop22 %} selected {% endif %}>{{troop.troop}}</option>
-                    {% endfor %}
-                  </select>
-
-                  <img id="imgd22" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop22}}.png" alt="">
-
-                  <input type="range" name="numd22" class="form-range range-input" id="customRange6" min="0" max="100" step="5" value="{{defensive_formation_data.numd22}}">
-                  <div> <span>%</span> <span class="range-value" id="rangeValue6">{{defensive_formation_data.numd22}}</span>  | {{defensive_formation_data.countd22}}</div> 
-                </div>
-
-                <div class="formation-item"  id="23">
-                  <b>23</b>
-
-                  <select id="slcd-23" name="troop23" class="troop-select" aria-label="Default select example">
-                    {% for troop in union_troops %}
-                    <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop23 %} selected {% endif %}>{{troop.troop}}</option>
-                    {% endfor %}
-                  </select>
-                  
-                  <img id="imgd23" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop23}}.png" alt="">
-
-                  <input type="range" name="numd23" class="form-range range-input" id="customRange7" min="0" max="100" step="5" value="{{defensive_formation_data.numd23}}">
-                  <div> <span>%</span> <span class="range-value" id="rangeValue7">{{defensive_formation_data.numd23}}</span>  | {{defensive_formation_data.countd23}}</div> 
-                </div>
-
-                <div class="formation-item"  id="24">
-                  <b>24</b>
-
-                  <select id="slcd-24" name="troop24" class="troop-select" aria-label="Default select example">
-                    {% for troop in union_troops %}
-                    <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop24 %} selected {% endif %}>{{troop.troop}}</option>
-                    {% endfor %}
-                  </select>
-                  
-                  <img id="imgd24" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop24}}.png" alt="">
-
-                  <input type="range" name="numd24" class="form-range range-input" id="customRange8" min="0" max="100" step="5" value="{{defensive_formation_data.numd24}}">
-                  <div> <span>%</span> <span class="range-value" id="rangeValue8">{{defensive_formation_data.numd24}}</span>  | {{defensive_formation_data.countd24}}</div> 
-                </div>
-
+              <div class="hero-small-image">
+                <img id="imgh{{position}}" class="hero-img" src="{% get_static_prefix %}images/heroes/{{99}}.png" alt="">
               </div>
-
-
-                <div class="formation-row">
-                  <div class="formation-item" id="11">
-                    <b>11</b>
-                      <select id="slcd-11" name="troop11" class="troop-select" aria-label="Default select example">
-                        {% for troop in union_troops %}
-                        <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop11 %} selected {% endif %}>{{troop.troop}}</option>
-                        {% endfor %}
-                      </select>
-          
-                      <img id="imgd11" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop11}}.png" alt="">
-          
-                      <input type="range" name="numd11" class="form-range range-input" id="customRange9" min="0" max="100" step="5" value="{{defensive_formation_data.numd11}}">
-                      <div> <span>%</span> <span class="range-value" id="rangeValue9">{{defensive_formation_data.numd11}}</span>  | {{defensive_formation_data.countd11}}</div> 
-                  </div>
-          
-                  <div class="formation-item" id="12">
-                    <b>12</b>    
-                    
-                    <select id="slcd-12" name="troop12" class="troop-select" aria-label="Default select example">
-                      {% for troop in union_troops %}
-                      <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop12 %} selected {% endif %}>{{troop.troop}}</option>
-                      {% endfor %}
-                    </select>
-          
-                    <img id="imgd12" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop12}}.png" alt="">
-          
-                    <input type="range" name="numd12" class="form-range range-input" id="customRange10" min="0" max="100" step="5" value="{{defensive_formation_data.numd12}}">
-                    <div> <span>%</span> <span class="range-value" id="rangeValue10">{{defensive_formation_data.numd12}}</span>  | {{defensive_formation_data.countd12}}</div> 
-                  </div>
-          
-                  <div class="formation-item"  id="13">
-                    <b>13</b>
-          
-                    <select id="slcd-13" name="troop13" class="troop-select" aria-label="Default select example">
-                      {% for troop in union_troops %}
-                      <option id="{{troop.troop.id}}" value="{{troop.id}}"{% if troop.troop.id == defensive_formation_data.troop13 %} selected {% endif %}>{{troop.troop}}</option>
-                      {% endfor %}
-                    </select>
-                    
-                    <img id="imgd13" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop13}}.png" alt="">
-          
-                    <input type="range" name="numd13" class="form-range range-input" id="customRange11" min="0" max="100" step="5" value="{{defensive_formation_data.numd13}}">
-                    <div> <span>%</span> <span class="range-value" id="rangeValue11">{{defensive_formation_data.numd13}}</span>  | {{defensive_formation_data.countd13}}</div> 
-                  </div>
-          
-                  <div class="formation-item"  id="14">
-                    <b>14</b>
-          
-                    <select id="slcd-14" name="troop14" class="troop-select" aria-label="Default select example">
-                      {% for troop in union_troops %}
-                      <option id="{{troop.troop.id}}" value="{{troop.id}}" {% if troop.troop.id == defensive_formation_data.troop14 %} selected {% endif %}>{{troop.troop}}</option>
-                      {% endfor %}
-                    </select>
-                    
-                    <img id="imgd14" class="formation-img" src="{% get_static_prefix %}images/troops/{{defensive_formation_data.troop14}}.png" alt="">
-          
-                    <input type="range" name="numd14" class="form-range range-input" id="customRange12" min="0" max="100" step="5" value="{{defensive_formation_data.numd14}}">
-                    <div> <span>%</span> <span class="range-value" id="rangeValue12">{{defensive_formation_data.numd14}}</span> | {{defensive_formation_data.countd14}}</div> 
-                  </div>
-          
-                </div>
-            
-                <div class="battle-field">
-                  <span id="battle-field">BATTLE FIELD</span>
-                </div>
-          
             </div>
+            
+        </div>
+        
+        
+        {% endfor %}
+          
+          
+            <div class="battle-field">
+              <span id="battle-field">BATTLE FIELD</span>
+            </div>
+    
+      </div>
 
-            <button type="submit" class="btn btn-danger">SAVE POSITION</button>
+      <button type="submit" class="btn btn-danger">SAVE POSITION</button>
+
+    </form>
 
 
-          </form>
+
+<!------------------------------------------------------------------------>
+
+
 
         <hr>
       <h4>SEND TROOPS</h4>
@@ -291,11 +148,60 @@
 
           <input type="hidden" name="form_type" value="send">
 
-          <div class="formation-table">
-            
+
+
+          
+          <div class="formation-table2">
             <div class="battle-field">
               <span id="battle-field">BATTLE FIELD</span>
             </div>
+              {% for position in positions %}
+
+              <div class="formation-item2" id="{{position}}">
+                <b>{{position}}</b>
+                
+                <div class="hero-select-container">
+                  <div class="hero-select-menu">
+                        <select id="herod-{{position}}" name="herod{{position}}" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                          <option id ="99">Add Hero</option>
+                          {% for hero in user_heroes %}
+                          <option id="{{hero.hero.id}}" value="{{hero.id}}">{{hero.hero}}</option>
+                          {% endfor %}
+                        </select>
+                      </div>
+                      
+                      <div class="hero-small-image">
+                      <img id="imgh{{position}}" class="hero-img" src="{% get_static_prefix %}images/heroes/{{99}}.png" alt="">
+                    </div>
+                  </div>
+                  
+                  
+                <select id="slc-{{position}}" name="troop{{position}}" class="troop-select" aria-label="Default select example">
+                  {% for troop in user_counted_troops %}
+                  <option id="{{troop.troop.id}}" value="{{troop.id}}">{{troop.troop}}</option>
+                  {% endfor %}
+                </select>
+                
+                <img id="img{{position}}" class="formation-img" src="{% get_static_prefix %}images/troops/{{user_counted_troops.0.troop.id}}.png" alt="">
+                
+                <input class="troop-input" type="number" id="num{{position}}" name="num{{position}}" min="0"  value="0">
+              </div>
+              
+              {% endfor %}
+            </div>
+
+
+            <hr>
+
+            <!--
+            
+
+            <div class="formation-table">
+            
+              <div class="battle-field">
+                <span id="battle-field">BATTLE FIELD</span>
+              </div>
+
 
               <div class="formation-row">
                 <div class="formation-item" id="11">
@@ -473,7 +379,7 @@
 
             </div>
 
-
+-->
 
             <div>
               <label for="locx">X: </label>
@@ -618,7 +524,25 @@
 </script>
 
 <script>
-  {% for block in blocks %}
+  const selectImgPairsh = document.querySelectorAll('[id^="herod-"]');
+  selectImgPairsh.forEach(pair => {
+    const imgh = document.querySelector(`#imgh${pair.id.slice(6)}`);
+    
+    // add event listener to select element
+    pair.addEventListener('change', (event) => {
+      console.log('Hero çalıştı');
+      const selected = pair.querySelector(`option[value="${event.target.value}"]`);
+      const idh = selected.id
+      console.log(idh);
+      imgh.src = `{% get_static_prefix %}images/heroes/${idh}.png`;
+    });
+  });
+</script>
+
+
+
+<script>
+  {% for block in positions %}
   
     var range{{block}} = document.getElementById("customRange{{block}}");
     var rangeValue{{block}} = document.getElementById("rangeValue{{block}}");
