--- a/warofsix/main/static/style/main.css
+++ b/warofsix/main/static/style/main.css
@@ -10,6 +10,12 @@ a:visited{
 
 /* ----------- INDEX PAGE -------------------  */
 
+
+.flex-center{
+    display: flex;
+    justify-content: center;
+}
+
 .section{
     position: relative;
     width: 100%;
@@ -78,7 +84,7 @@ a:visited{
 
 .mini-resource{
     display: flex;
-    max-width: 400px;
+    max-width: 450px;
     min-width: 200px;
     column-gap: 10px;
     font-size: 1.3rem;
@@ -90,9 +96,28 @@ a:visited{
     justify-content: center;
 }
 
+.midi-resource{
+    display: flex;
+    max-width: 600px;
+    min-width: 580px;
+    column-gap: 10px;
+    font-size: 1.3rem;
+    background: black;
+    border: 3px solid goldenrod;
+    border-radius: 10px;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
 .resource-icon{
     width: 1.5rem;
 
+}
+
+.token-icon{
+    width: 1.5rem;
+    border-radius: 50%;
 }
 
 .troop-frame{
@@ -437,7 +462,49 @@ a:visited{
     font-size: 0.9rem;
 }
 
+.formation-table2{
+    display: flex;
+    flex-direction: row;
+    /* margin-right: 70px;
+    margin-left: 70px; */
+    flex-wrap: wrap;
+    min-width: 740px;
+    max-width: 780px;
+    row-gap: 5px;
+    column-gap: 5px;
+    align-items: center;
+}
 
+.formation-item2{
+    display: flex;
+    flex-direction: column;
+    /* max-height: max-content; */
+    /* row-gap: 5px; */
+    width: 180px;
+    /* min-height: 130px; */
+    background: burlywood;
+    align-items: center;
+    padding: 3px;
+    border-radius: 6px;
+    border: 1px dashed black;
+}
+
+
+.hero-select-container{
+    display: flex;
+
+}
+
+.hero-select-menu{
+    width: 125px;
+}
+
+.hero-small-image{
+    width: 30px;
+}
+.hero-img{
+    width: 30px;
+}
 /* ******************* DEPARTING CAMP ITEMS ************ */
 
 .departing-camp-container{
@@ -493,6 +560,9 @@ a:visited{
 }
 
 /* ************************* */
+.form-select{
+    font-weight: bolder;
+}
 
 .troop-select {
     background-color: transparent;
