--- a/warofsix/main/templates/registration/login.html
+++ b/warofsix/main/templates/registration/login.html
@@ -20,6 +20,13 @@
 <body>
 
     <div class="login-main-body">
+        {% if messages %}
+        <ul class="messages" style="background:aqua;">
+            {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
 
         <div class="flex-column-center padding50">
 
