--- a/warofsix/main/templates/main/index.html
+++ b/warofsix/main/templates/main/index.html
@@ -44,7 +44,7 @@
       </div>
   
       <div class="menu-container">
-        <a class="tag-small-black" href="/guide">
+        <a class="tag-small-black" href="/guide/tr">
           <div class="menu-icon-container">
             <img id="icon-guide" src="{% get_static_prefix %}images/index/guide.png">
           </div>
