--- a/warofsix/main/templates/main/navbar.html
+++ b/warofsix/main/templates/main/navbar.html
@@ -9,7 +9,7 @@
     </div>
     
     <div>
-        <a href="/guide">
+        <a target="_blank" href="/guide/tr">
             <img class="mini-nav-icon" src="{% get_static_prefix %}images/others/help.png" title="Documents">
         </a>
     </div>
