usermassages reply button fix

--- a/warofsix/usermessages/templates/usermessages/message_detail.html
+++ b/warofsix/usermessages/templates/usermessages/message_detail.html
@@ -33,7 +33,8 @@
             </div>
             
 <p></p>
-            <p><a class="reply" href="/usermessages/new_message?user_id={{message.sender.id}}&header=RE:{{message.header}}">Reply</a></p>
+            <p><a class="reply" href="/usermessages/new_message?username={{message.sender}}">Reply</a></p>
+            
 
                     
         </div>
